--- a/serpent/index.html
+++ b/serpent/index.html
@@ -22,7 +22,7 @@
         The goal is to keep the shield rate low, while keeping the success rate to 100%.<br>
         <br>
         Try to learn the timing at first, then play this mini game while doing something else (watch a movie, analyze a VOD, talk to someone, ...).
-        You'll learn the timing of the grenades in no time.<br>
+        You'll learn the timing of the grenades in no time.<br><br>
         <b>Score:</b> <span id="score">0</span> / <span id="total">0</span><br>
         <b>Success Rate:</b> <span id="success_rate">0</span>%<br>
         <b>Shield Rate:</b> <span id="shield_rate">0</span>%<br>
